<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/primary">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="HOW IT WORKS"
            android:maxLines="1"
            android:textSize="16sp"
            fontPath="@string/font_brandon_black"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:focusableInTouchMode="true"
            android:focusable="true"/>

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                fontPath="@string/font_lato_bold"
                android:textSize="16sp"
                android:text="@string/gift_it_question1"
                android:textColor="@color/textColorTertiary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                fontPath="@string/font_lato_regular"
                android:textSize="13sp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/gift_it_answer1"
                android:textColor="@color/textColorTertiary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                fontPath="@string/font_lato_bold"
                android:textSize="16sp"
                android:text="@string/gift_it_question2"
                android:textColor="@color/textColorTertiary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                fontPath="@string/font_lato_regular"
                android:textSize="13sp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/gift_it_answer2"
                android:textColor="@color/textColorTertiary"/>


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                fontPath="@string/font_lato_bold"
                android:textSize="16sp"
                android:text="@string/gift_it_question8"
                android:textColor="@color/textColorTertiary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                fontPath="@string/font_lato_regular"
                android:textSize="13sp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/gift_it_answer8"
                android:textColor="@color/textColorTertiary"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/gift_preview" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                fontPath="@string/font_lato_bold"
                android:textSize="16sp"
                android:text="@string/gift_it_question3"
                android:textColor="@color/textColorTertiary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                fontPath="@string/font_lato_regular"
                android:textSize="13sp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/gift_it_answer3"
                android:textColor="@color/textColorTertiary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                fontPath="@string/font_lato_bold"
                android:textSize="16sp"
                android:text="@string/gift_it_question4"
                android:textColor="@color/textColorTertiary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                fontPath="@string/font_lato_regular"
                android:textSize="13sp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/gift_it_answer4"
                android:textColor="@color/textColorTertiary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                fontPath="@string/font_lato_bold"
                android:textSize="16sp"
                android:text="@string/gift_it_question5"
                android:textColor="@color/textColorTertiary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                fontPath="@string/font_lato_regular"
                android:textSize="13sp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/gift_it_answer5"
                android:textColor="@color/textColorTertiary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                fontPath="@string/font_lato_bold"
                android:textSize="16sp"
                android:text="@string/gift_it_question6"
                android:textColor="@color/textColorTertiary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                fontPath="@string/font_lato_regular"
                android:textSize="13sp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/gift_it_answer6"
                android:textColor="@color/textColorTertiary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                fontPath="@string/font_lato_bold"
                android:textSize="16sp"
                android:text="@string/gift_it_question7"
                android:textColor="@color/textColorTertiary"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                fontPath="@string/font_lato_regular"
                android:textSize="13sp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/gift_it_answer7"
                android:textColor="@color/textColorTertiary"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>