<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_medium"
    android:gravity="center_vertical"
    >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_above="@+id/tv_like_empty_title"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bear_hand_up"
        />

    <TextView
        android:id="@+id/tv_like_empty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/txt_tempty_likelist"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        fontPath="@string/font_brandon_black"
        tools:ignore="MissingPrefix"
        />

    <TextView
        android:id="@+id/tv_like_empty_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_like_empty_title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/txt_empty_likelst_instruction"
        android:textColor="@color/textColorTertiary"
        android:textSize="@dimen/material_text_body2"
        fontPath="@string/font_lato_regular"
        tools:ignore="MissingPrefix"
        />


</RelativeLayout>