<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_activity_edit_email"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:background="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/change_email"
            android:maxLines="1"
            android:textSize="16sp"
            fontPath="@string/font_brandon_bold"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmail"
            fontPath="@string/font_lato_regular"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_white_stroke_loblolly_radius_4dp"
            android:inputType="textEmailAddress"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/textColorPrimary"
            android:hint="Enter email address"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <android.support.v7.widget.AppCompatTextView
            fontPath="@string/font_lato_italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="We’ll send your order confirmation to this email address."
            android:textColor="@color/textColorFourth"
            android:textSize="11sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/cvSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvSave"
                fontPath="@string/font_brandon_black"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>