<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_medium"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/tv_wish_empty_title"
        android:layout_centerHorizontal="true"
        android:src="@drawable/baby_bear"
        />

    <TextView
        android:id="@+id/tv_wish_empty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/txt_empty_wishlist"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/material_text_subhead"
        fontPath="@string/font_brandon_black"
        tools:ignore="MissingPrefix"
        />

    <TextView
        android:id="@+id/tv_wish_empty_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_wish_empty_title"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:text="Rachel Tan hasn’t created a wishlist yet."
        android:textColor="@color/textColorTertiary"
        android:textSize="@dimen/material_text_body2"
        fontPath="@string/font_lato_regular"
        tools:ignore="MissingPrefix"
        />


</RelativeLayout>